# rusty-rag-chunker

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml
benchmarks/: benchmark_chunkers.py  eval_faq.py  faq.json  generate_datasets.py  results.csv
data/corpus/: apache_lucene.txt  bert_language_model.txt  byte_pair_encoding.txt  cosine_similarity.txt  elasticsearch.txt  foreign_function_interface.txt  garbage_collection_computer_science.txt  gpt_4.txt  information_retrieval.txt  just_in_time_compilation.txt  k_nearest_neighbors_algorithm.txt  large_language_model.txt  memory_safety.txt  named_entity_recognition.txt  natural_language_processing.txt  openai.txt  pagerank.txt  parallel_computing.txt  python_programming_language.txt  retrieval_augmented_generation.txt  rust_programming_language.txt  semantic_search.txt  sentiment_analysis.txt  simd.txt  tf_idf.txt  tokenization_lexical_analysis.txt  transformer_machine_learning_model.txt  vector_database.txt  word2vec.txt  word_embedding.txt
data/docs/: configuration.md  hallucination_guard.md  project_overview.md  rust_extension_api.md
data/raw/: python.txt  rust.txt
python/rusty_rag/: cli.py  config.py  embeddings.py  ingest.py  vector_store.py
rusty_rag/: cli.py  config.py  documents.py  prompt.py  retrieve.py  vector_store.py
scripts/: demo.py  fetch_corpus.py
src/: lib.rs
tests/: test_chunking.py  test_e2e.py  test_ingest.py  test_retrieve.py  test_smoke.py  test_token_limits.py
